--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,58 @@
 
 /* Your CSS Code here. */
+*{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .container{
+            display: flex;
+            justify-content: space-around;
+        }
+        .holder{
+           width: 60px;
+           height: 60px;
+           font-size: 25px;
+           flex-wrap: wrap;
+        }
+        #box1{
+            background-color: red;
+            order: 2;
+        }
+        #box2{
+            background-color: blue;
+            order: 3;
+        }
+        #box3{
+            background-color: green;
+            order: 1;
+        }
+        .main{
+           display: flex;
+           flex-direction: row;
+           justify-content: space-evenly;
+           flex-wrap: wrap;
+        }
+        #box-1{
+            background-color: red;
+            order: 6;
+        }
+        #box-2{
+            background-color: blue;
+            order: 7;
+        }
+        #box-3{
+            background-color: green;
+        }
+        #box-4{
+            background-color: green;
+        }
+        #box-5{
+            background-color: green;
+        }
+        #box-6{
+            background-color: green;
+        }
+        #box-7{
+            background-color: green;
+        }
